Modificación título y añadida línea para incluir css -> link...

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Aquí, irá la página web del restaurante </title>
+	<title> Web Restaurante </title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
 
