Three sections added to index.html

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,6 +8,21 @@
 
 <h1>Our menu</h1>
 
+<section>
+  <h2>WWF</h2>
+  <h3>The World Wide Fund for Nature (WWF) is....</h3>
+</section>
+
+<section>
+  <h2>WWF</h2>
+  <h3>The World Wide Fund for Nature (WWF) is....</h3>
+</section>
+
+<section>
+  <h2>WWF</h2>
+  <h3>The World Wide Fund for Nature (WWF) is....</h3>
+</section>
+
 <p>My first paragraph.</p>
 
 </body>
