--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,17 +9,17 @@
 <h1>Our menu</h1>
 
 <section>
-  <h2>WWF</h2>
+  <h2>Chicken</h2>
   <h3>The World Wide Fund for Nature (WWF) is....</h3>
 </section>
 
 <section>
-  <h2>WWF</h2>
+  <h2>Beef</h2>
   <h3>The World Wide Fund for Nature (WWF) is....</h3>
 </section>
 
 <section>
-  <h2>WWF</h2>
+  <h2>Sushi</h2>
   <h3>The World Wide Fund for Nature (WWF) is....</h3>
 </section>
 
