Pruebas con responsive design...

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,19 +8,19 @@
 
 <h1>Our menu</h1>
 
-<section>
+<section id="section1">
   <h2>Chicken</h2>
-  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis. Ut posuere quis felis at auctor. Praesent pellentesque hendrerit pharetra. Suspendisse potenti. Nam nisl ligula, vulputate quis libero in, bibendum ultrices nulla. Donec in felis at ligula dignissim mattis sit amet non dui. Vivamus hendrerit ipsum vel ex semper scelerisque. Curabitur neque mi, placerat id turpis eget, hendrerit auctor turpis.</h3>
+  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
 </section>
 
-<section>
+<section id="section1">
   <h2>Beef</h2>
-  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis. Ut posuere quis felis at auctor. Praesent pellentesque hendrerit pharetra. Suspendisse potenti. Nam nisl ligula, vulputate quis libero in, bibendum ultrices nulla. Donec in felis at ligula dignissim mattis sit amet non dui. Vivamus hendrerit ipsum vel ex semper scelerisque. Curabitur neque mi, placerat id turpis eget, hendrerit auctor turpis.</h3>
+  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
 </section>
 
 <section>
   <h2>Sushi</h2>
-  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis. Ut posuere quis felis at auctor. Praesent pellentesque hendrerit pharetra. Suspendisse potenti. Nam nisl ligula, vulputate quis libero in, bibendum ultrices nulla. Donec in felis at ligula dignissim mattis sit amet non dui. Vivamus hendrerit ipsum vel ex semper scelerisque. Curabitur neque mi, placerat id turpis eget, hendrerit auctor turpis.</h3>
+  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
 </section>
 
 <p>My first paragraph.</p>
