--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,21 +8,20 @@
 
 <h1>Our menu</h1>
 
-<section id="section1">
-  <h2>Chicken</h2>
-  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
-</section>
-
-<section id="section1">
-  <h2>Beef</h2>
-  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
-</section>
-
-<section>
-  <h2>Sushi</h2>
-  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
-</section>
-
+<div class="row">
+	<section id="section1">
+  	<h2>Chicken</h2>
+  	<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
+	</section>
+	<section id="section1">
+  	<h2>Beef</h2>
+  	<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
+	</section>
+	<section>
+  	<h2>Sushi</h2>
+  	<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
+	</section>
+</div>
 <p>My first paragraph.</p>
 
 </body>
