--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -20,13 +20,13 @@
 	<div class="col-md-1">
 	<div class="col-md-2">&nbsp</div>
 	<div class="col-md-2">&nbsp</div>
-  	<h2 id="p1">Beef</h2>
+  	<div class="col-md-3">Beef</div>
   	<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
 	</div>
 	<div class="col-md-1">
 	<div class="col-md-2">&nbsp</div>
 	<div class="col-md-2">&nbsp</div>
-  	<h2 id="p1">Sushi</h2>
+  	<div class="col-md-3">Sushi</div>
   	<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis lectus nec quam sodales tincidunt at vitae ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vulputate sapien sit amet erat dapibus, et fermentum nunc fermentum. Nulla mauris magna, rhoncus scelerisque orci vel, posuere blandit leo. Ut consequat eleifend turpis fermentum mollis.</h3>
 	</div>
 </div>
